// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth configuration renders all auth enabled 1`] = `
<main
  className="Main-root"
  data-testid="signIn-main"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-full"
    >
      <div
        className="coral coral-login-field SignInWithEmail-field"
      >
        <div
          className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
        >
          <label
            className="InputLabel-root"
            htmlFor="email"
          >
            Email address
          </label>
          <div
            className="TextField-root TextField-fullWidth"
          >
            <input
              className="TextField-input TextField-colorStreamBlue"
              disabled={false}
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="coral coral-login-field SignInWithEmail-field"
      >
        <div
          className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
        >
          <label
            className="InputLabel-root"
            htmlFor="password"
          >
            Password
          </label>
          <div
            className="PasswordField-fullWidth PasswordField-root"
          >
            <div
              className="PasswordField-wrapper"
            >
              <input
                className="PasswordField-colorStreamBlue PasswordField-fullWidth PasswordField-input"
                data-testid="password-field"
                disabled={false}
                id="password"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
              <div
                className="PasswordField-icon"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex={0}
                title="Hide password"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  visibility
                </i>
              </div>
            </div>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
          >
            <div
              className="coral coral-login-signInWithEmail-forgotPassword SignInWithEmail-forgotPassword"
            >
              <a
                className="BaseButton-root Button-base Button-flat Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-colorPrimary Button-underline"
                data-variant="flat"
                disabled={false}
                href="http://localhost/?view=FORGOT_PASSWORD"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
              >
                Forgot your password?
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="SignInWithEmail-actions"
      >
        <button
          className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-upperCase Button-fullWidth"
          data-variant="filled"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-md coral coral-icon SignInWithEmail-icon"
            >
              email
            </i>
            <span>
              Sign in with Email
            </span>
          </div>
        </button>
      </div>
    </div>
  </form>
  <div
    className="coral coral-login-orSeparator OrSeparator-or"
  >
    Or
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-upperCase Button-fullWidth coral coral-login-facebookButton FacebookButton-button"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <div
          className="FacebookButton-icon"
        >
          <svg
            fill="none"
            height="17"
            viewBox="0 0 17 17"
            width="17"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.0893 1.25391C16.0893 1.00781 15.9838 0.796875 15.808 0.621094C15.6323 0.480469 15.4213 0.375 15.2104 0.375H1.21819C0.936942 0.375 0.726005 0.480469 0.58538 0.621094C0.409598 0.796875 0.339286 1.00781 0.339286 1.25391V15.2461C0.339286 15.4922 0.409598 15.7031 0.58538 15.8789C0.726005 16.0547 0.936942 16.125 1.21819 16.125H8.74163V10.0078H6.70257V7.65234H8.74163V5.89453C8.74163 4.91016 9.02288 4.13672 9.58538 3.57422C10.1479 3.04688 10.8862 2.76562 11.8002 2.76562C12.5033 2.76562 13.1362 2.80078 13.6283 2.83594V4.98047H12.3627C11.9057 4.98047 11.5893 5.08594 11.4135 5.29688C11.2729 5.47266 11.2026 5.75391 11.2026 6.14062V7.65234H13.558L13.2416 10.0078H11.2026V16.125H15.2104C15.4565 16.125 15.6674 16.0547 15.8432 15.8789C15.9838 15.7031 16.0893 15.4922 16.0893 15.2461V1.25391Z"
              fill="white"
            />
          </svg>
        </div>
        <span>
          Sign in with Facebook
        </span>
      </div>
    </button>
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-upperCase Button-fullWidth coral coral-login-googleButton GoogleButton-button"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <div
          className="GoogleButton-icon"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 18 18"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.2924 9.46094C17.2924 9.00391 17.2221 8.51172 17.1518 7.98438H8.85491V11.0078H13.8119C13.7065 11.5352 13.4955 12.0625 13.2143 12.5547C12.7924 13.1875 12.2651 13.7148 11.6323 14.0664C10.8237 14.5586 9.9096 14.7695 8.85491 14.7695C7.87054 14.7695 6.95647 14.5234 6.14788 14.0312C5.30413 13.5391 4.67132 12.8711 4.17913 12.0273C3.68694 11.1836 3.44085 10.2695 3.44085 9.25C3.44085 8.08984 3.75725 7.03516 4.39007 6.12109C4.95257 5.27734 5.726 4.64453 6.71038 4.22266C7.6596 3.80078 8.64397 3.66016 9.62835 3.80078C10.683 3.94141 11.5619 4.39844 12.3354 5.10156L14.6908 2.81641C13.0737 1.30469 11.1049 0.53125 8.85491 0.53125C7.27288 0.53125 5.83147 0.953125 4.49554 1.72656C3.1596 2.5 2.06975 3.55469 1.29632 4.89062C0.52288 6.22656 0.136161 7.70312 0.136161 9.25C0.136161 10.832 0.52288 12.2734 1.29632 13.6094C2.06975 14.9453 3.1596 16.0352 4.49554 16.8086C5.83147 17.582 7.27288 17.9688 8.85491 17.9688C10.5073 17.9688 11.9838 17.6172 13.2494 16.8789C14.5151 16.1758 15.5346 15.1562 16.2377 13.8555C16.9408 12.5898 17.2924 11.1133 17.2924 9.46094Z"
              fill="white"
            />
          </svg>
        </div>
        <span>
          Sign in with Google
        </span>
      </div>
    </button>
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-upperCase Button-fullWidth coral coral-login-oidcButton OIDCButton-button"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <span>
        Sign in with OIDC
      </span>
    </button>
  </div>
</main>
`;

exports[`auth configuration renders only some social login enabled 1`] = `
<main
  className="Main-root"
  data-testid="signIn-main"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-upperCase Button-fullWidth coral coral-login-facebookButton FacebookButton-button"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <div
          className="FacebookButton-icon"
        >
          <svg
            fill="none"
            height="17"
            viewBox="0 0 17 17"
            width="17"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.0893 1.25391C16.0893 1.00781 15.9838 0.796875 15.808 0.621094C15.6323 0.480469 15.4213 0.375 15.2104 0.375H1.21819C0.936942 0.375 0.726005 0.480469 0.58538 0.621094C0.409598 0.796875 0.339286 1.00781 0.339286 1.25391V15.2461C0.339286 15.4922 0.409598 15.7031 0.58538 15.8789C0.726005 16.0547 0.936942 16.125 1.21819 16.125H8.74163V10.0078H6.70257V7.65234H8.74163V5.89453C8.74163 4.91016 9.02288 4.13672 9.58538 3.57422C10.1479 3.04688 10.8862 2.76562 11.8002 2.76562C12.5033 2.76562 13.1362 2.80078 13.6283 2.83594V4.98047H12.3627C11.9057 4.98047 11.5893 5.08594 11.4135 5.29688C11.2729 5.47266 11.2026 5.75391 11.2026 6.14062V7.65234H13.558L13.2416 10.0078H11.2026V16.125H15.2104C15.4565 16.125 15.6674 16.0547 15.8432 15.8789C15.9838 15.7031 16.0893 15.4922 16.0893 15.2461V1.25391Z"
              fill="white"
            />
          </svg>
        </div>
        <span>
          Sign in with Facebook
        </span>
      </div>
    </button>
    <button
      className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-upperCase Button-fullWidth coral coral-login-googleButton GoogleButton-button"
      data-variant="filled"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="button"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <div
          className="GoogleButton-icon"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 18 18"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.2924 9.46094C17.2924 9.00391 17.2221 8.51172 17.1518 7.98438H8.85491V11.0078H13.8119C13.7065 11.5352 13.4955 12.0625 13.2143 12.5547C12.7924 13.1875 12.2651 13.7148 11.6323 14.0664C10.8237 14.5586 9.9096 14.7695 8.85491 14.7695C7.87054 14.7695 6.95647 14.5234 6.14788 14.0312C5.30413 13.5391 4.67132 12.8711 4.17913 12.0273C3.68694 11.1836 3.44085 10.2695 3.44085 9.25C3.44085 8.08984 3.75725 7.03516 4.39007 6.12109C4.95257 5.27734 5.726 4.64453 6.71038 4.22266C7.6596 3.80078 8.64397 3.66016 9.62835 3.80078C10.683 3.94141 11.5619 4.39844 12.3354 5.10156L14.6908 2.81641C13.0737 1.30469 11.1049 0.53125 8.85491 0.53125C7.27288 0.53125 5.83147 0.953125 4.49554 1.72656C3.1596 2.5 2.06975 3.55469 1.29632 4.89062C0.52288 6.22656 0.136161 7.70312 0.136161 9.25C0.136161 10.832 0.52288 12.2734 1.29632 13.6094C2.06975 14.9453 3.1596 16.0352 4.49554 16.8086C5.83147 17.582 7.27288 17.9688 8.85491 17.9688C10.5073 17.9688 11.9838 17.6172 13.2494 16.8789C14.5151 16.1758 15.5346 15.1562 16.2377 13.8555C16.9408 12.5898 17.2924 11.1133 17.2924 9.46094Z"
              fill="white"
            />
          </svg>
        </div>
        <span>
          Sign in with Google
        </span>
      </div>
    </button>
  </div>
</main>
`;

exports[`renders sign in view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="signIn-container"
    >
      <div
        role="banner"
      >
        <div
          className="coral coral-login-bar SignIn-bar"
        >
          <div
            className="coral coral-login-title SignIn-title"
          >
            Sign in
          </div>
          <div
            className="coral coral-login-header SignIn-header"
          >
            to join the conversation
          </div>
        </div>
      </div>
      <div
        className="coral coral-login-subBar SignIn-subBar"
        role="contentinfo"
      >
        <div
          className="coral coral-login-signIn-noAccount SignIn-noAccount"
        >
          Don't have an account? 
          <a
            className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilySecondary Button-fontWeightSecondarySemiBold Button-colorPrimary Button-underline SignIn-signUp"
            data-variant="flat"
            disabled={false}
            href="http://localhost/?view=SIGN_UP"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
          >
            Sign up
          </a>
        </div>
      </div>
      <main
        className="Main-root"
        data-testid="signIn-main"
      >
        <form
          autoComplete="off"
          onSubmit={[Function]}
        >
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="coral coral-login-field SignInWithEmail-field"
            >
              <div
                className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
              >
                <label
                  className="InputLabel-root"
                  htmlFor="email"
                >
                  Email address
                </label>
                <div
                  className="TextField-root TextField-fullWidth"
                >
                  <input
                    className="TextField-input TextField-colorStreamBlue"
                    disabled={false}
                    id="email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Email address"
                    type="email"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="coral coral-login-field SignInWithEmail-field"
            >
              <div
                className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
              >
                <label
                  className="InputLabel-root"
                  htmlFor="password"
                >
                  Password
                </label>
                <div
                  className="PasswordField-fullWidth PasswordField-root"
                >
                  <div
                    className="PasswordField-wrapper"
                  >
                    <input
                      className="PasswordField-colorStreamBlue PasswordField-fullWidth PasswordField-input"
                      data-testid="password-field"
                      disabled={false}
                      id="password"
                      name="password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                    <div
                      className="PasswordField-icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      role="button"
                      tabIndex={0}
                      title="Hide password"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon"
                      >
                        visibility
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <div
                    className="coral coral-login-signInWithEmail-forgotPassword SignInWithEmail-forgotPassword"
                  >
                    <a
                      className="BaseButton-root Button-base Button-flat Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-colorPrimary Button-underline"
                      data-variant="flat"
                      disabled={false}
                      href="http://localhost/?view=FORGOT_PASSWORD"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                    >
                      Forgot your password?
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="SignInWithEmail-actions"
            >
              <button
                className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-upperCase Button-fullWidth"
                data-variant="filled"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="submit"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-md coral coral-icon SignInWithEmail-icon"
                  >
                    email
                  </i>
                  <span>
                    Sign in with Email
                  </span>
                </div>
              </button>
            </div>
          </div>
        </form>
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        />
      </main>
    </div>
  </div>
</div>
`;
